# HaskellR

./: .ghci  .gitignore  .gitmodules  .travis.yml  H.cabal  H.ghci  HACKING.md  INSTALL-unix.md  INSTALL-win.md  LICENSE  Makefile  README.md  Setup.hs  _config.yml  appveyor.yml  cabal.project  cabal.project.lts-18  cabal.project.lts-19  cabal.project.nightly-2022-01-23  circle.yml  default.nix  documentation.html  downloads.html  downloads.md  flake.nix  gemset.nix  ghc-9.2.1.yaml  haskell-and-R-env.nix  index.html  installwin.bat  nixpkgs.nix  raskell.cabal  shell-cabal.nix  shell-from-nixpkgs-clone.nix  shell-lts-18.nix  shell-lts-19.nix  shell-lts-20.nix  shell-lts-21.nix  shell-lts-22.nix  shell-lts-24.nix  (+14 more)
.circleci/: config.yml
.github/workflows/: cabal.yaml  ci.yaml  flake.yaml  regression.yaml  stack.yaml  unix.yaml  windows.yaml  workflow.yaml
H/: H.cabal  H.ghci  H.hs  Setup.hs
H/tests/: qq-errors.ghci  qq-errors.ghci.golden.err  qq-errors.golden.err  qq.ghci  qq.ghci.golden.out  tests.hs
HaskellR-examples/: HaskellR-examples.cabal  RelaxWithNM.hs
HaskellR-examples/fft/: Main.hs
HaskellR-examples/fib/: Fib.hs  Main.hs
HaskellR-examples/nls/: Main.hs  nls.H  system.hs
IHaskell/: .hlint.yaml  ChangeLog.markdown  ChangeLog.md  README.md  ihaskell-inline-r.cabal
IHaskell/examples/: tutorial-ihaskell-inline-r.ipynb  tutorial.ipynb
IHaskell/src/IHaskell/Display/: InlineR.hs  R.hs
_data/: nav_docs.yml
_includes/: nav_docs.html
_layouts/: default.html  single.html  twocol.html
cbits/: Defn_pruned.h  Hcompat.h  darwin_c2hs_fix.h  init_r.c  init_r.h  missing_r.c  missing_r.h
css/: site.css
data/: complex.rds  double.rds
doc/: H-ints.md  H-user.md  INSTALL-win.md  pandoc.css
doc/ifl2014/: Makefile  definitions.tex  paper.lhs  paper.tex  references.bib
docs/: 00-How-to-install.md  01-using-h.md  02-evaluating-r-expressions.md  03-further-reading.md  04-evaluating-r-expressions.md  05-splicing-haskell-values-in-r.md  06-r-monad.md  07-how-to-analyze-r-values.md  08-r-values-and-side-effects.md  08-vectors.md  09-casts-and-coercions.md  10-managing-memory.md  11-catching-runtime-errors.md  12-differences-in-h-and-repl.md  13-introduction.md  14-architectural-overview.md  15-internal-structures.md  16-implementation-of-quasiquoters.md  17-how-r-interpreter-is-embedded.md  18-memory-allocation.md  20-H-with-IHaskell.md  20-inline-r-with-IHaskell.md  Gemfile  H-ints.md  H-user.md  README.md  _config.yml  architectural-overview.md  build-and-install.md  casts-and-coercions.md  catching-runtime-errors.md  circle.yml  default.nix  differences-repl-source.md  evaluating-r-expressions.md  faq.md  further-reading.md  gemset.nix  how-r-interpreter-is-embedded.md  how-to-analyze-r-values.md  (+14 more)
docs/_includes/: nav_docs.html
docs/_layouts/: default.html  single.html  twocol.html
docs/css/: pygments.css
docs/docs/: architectural-overview.md  build-and-install.md  casts-and-coercions.md  catching-runtime-errors.md  differences-repl-source.md  faq.md  how-r-interpreter-is-embedded.md  how-to-analyze-r-values.md  implementation-of-quasiquoters.md  inline-r-with-IHaskell.md  internal-structures.md  internals-introduction.md  managing-memory.md  memory-allocation.md  r-monad.md  r-values-and-side-effects.md  splicing-haskell-values-in-r.md  using-h.md  vectors.md
etc/: Dockerfile
etc/nix/: Dockerfile
examples/: .hlint.yaml  HaskellR-examples.cabal  LICENSE  RelaxWithNM.hs
examples/fib/: Fib.hs  Main.hs  Makefile
examples/nls/: nls.H  system.hs
examples/nls-2/: nls2.H  system.hs
examples/nls2/: Main.hs  nls2.H  system.hs
examples/regions/: example.lhs
examples/tutorial/: lifting.hs  tutorial.hs
ihaskell-H/: ChangeLog.md  ihaskell-H.cabal
ihaskell-H/examples/: HelloWorld.ipynb
ihaskell-inline-r/: LICENSE  ihaskell-inline-r.cabal
ihaskell-inline-r/examples/: tutorial-ihaskell-inline-r.ipynb
inline-r/: .hlint.yaml  CHANGELOG.md  Setup.hs  inline-r.buildinfo  inline-r.cabal
inline-r/R/: collectAntis.R
inline-r/cbits/: missing_r.c  missing_r.h
inline-r/src/Control/Concurrent/: OSThread.chs
inline-r/src/Control/Memory/: Region.hs
inline-r/src/Control/Monad/R/: Class.hs  Internal.hs
inline-r/src/Data/Vector/: SEXP.chs  SEXP.hs
inline-r/src/Data/Vector/SEXP/: Base.hs  Mutable.chs  Mutable.hs
inline-r/src/Data/Vector/SEXP/Mutable/: Internal.hs
inline-r/src/Foreign/: R.chs  R.hs  R.hsc
inline-r/src/Foreign/R/: Constraints.hs  Context.hsc  Embedded.chs  Embedded.hsc  Encoding.hsc  EventLoop.chs  EventLoop.hsc  Internal.hs  Internal.hsc  Parse.chs  Parse.hs  Parse.hsc  Type.hs-boot  Type.hsc
inline-r/src/H/: Constraints.hs  Prelude.hs
inline-r/src/H/Internal/: Error.hs
inline-r/src/H/Prelude/: Interactive.hs
inline-r/src/Internal/: Error.hs  Prelude.hs
inline-r/src/Language/: R.hs
inline-r/src/Language/R/: Debug.hs  Event.hs  GC.hs  Globals.hs  HExp.chs  HExp.hs  HExp.hs-boot  HExp.hsc  Instance.hs  Internal.hs  Internal.hs-boot  Literal.hs  Matcher.hs  Parser.hs  QQ.hs
inline-r/src/Language/R/Internal/: FunWrappers.hs
inline-r/src/Language/R/Internal/FunWrappers/: TH.hs
inline-r/tests/: bench-hexp.hs  bench-qq.hs  compile-qq-benchmarks.hs  hexp-bench.hs  test-compile-qq.hs  test-env1.hs  test-env2.hs  test-pull-request.sh  test-qq.hs  test-shootout-programs.hs  test-shootout.hs  tests.hs  vector.hs
inline-r/tests/R/: fact.R  fib-benchmark.R  fib.R
inline-r/tests/Test/: Constraints.hs  Event.hs  FunPtr.hs  GC.hs  HExp.hs  Matcher.hs  Parser.hs  Regions.hs  Vector.hs
inline-r/tests/ghci/: qq-stderr.ghci
inline-r/tests/shootout/: mandelbrot-noout.R  nbody.R  reversecomplement.R  spectralnorm.R
nix/: R.nix  ci.nix  haskellr-nixpkgs-overlay.nix  haskellr-site.nix  nixpkgs.nix
nix/extensions/: haskellR.nix  r.nix
package/windows/: Makefile  README  (+1 more)
src/: H.hs  Main.hs
tests/: compile-qq-benchmarks.hs  coverage-ghci.sh  ghcH.sh  ghciH.sh  hexp-bench.hs  run-coverage.sh  runtime-qq-benchmarks.hs  sandbox-utils.sh  test-compile-qq.hs  test-pull-request.sh  test-shootout-programs.hs  tests.hs  vector.hs
(+129 files in other folders)
