name:                H
version:             0.1.0.0
license:             AllRightsReserved
copyright:           Copyright (c) 2013 Amgen, Inc.
cabal-version:       >=1.10
build-type:          Simple
Category:            Compiler
Synopsis:            R-to-Haskell translator and interoperability solution.
-- description:
cabal-version:       >=1.10

data-files: .ghci

source-repository head
  type:     git
  location: git://github.com/ps-labs/H.git

library
  exposed-modules:     H
                       H.Inspect
                       H.Constraints
                       H.HExp
                       H.HVal
                       H.Module
                       H.Prelude
                       H.Prelude.Constants
                       H.Value
                       H.Internal.Literal
                       H.Internal.FunWrappers
                       H.Internal.TH
                       Data.Vector.SEXP
                       Foreign.R
                       Foreign.R.Type
                       Foreign.R.Embedded
                       Foreign.R.Interface
                       Foreign.R.Parse
                       Language.R
                       Language.R.Interpreter
                       Language.R.QQ
                       Language.R.Runtime.QQ
  build-depends:       base >= 4.6 && < 4.7
                     , aeson >= 0.6
                     , bytestring >= 0.10
                     , pretty >= 1.1
                     , process >= 1.0
                     , setenv >= 0.1.1
                     , text >= 0.11
                     , vector >= 0.10
                     , template-haskell
  hs-source-dirs:      src
  c-sources:           cbits/missing_r.c
  include-dirs:        cbits
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       DataKinds
                       FlexibleInstances
                       FlexibleContexts
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       KindSignatures
                       MultiParamTypeClasses
                       StandaloneDeriving
                       TypeOperators
                       OverloadedStrings
  other-extensions:    CPP
                       ForeignFunctionInterface
  build-tools:         c2hs
  if os(windows)
    extra-libraries:   R
  else
    pkgconfig-depends: libR >= 3.0
  ghc-options:         -Wall -Werror

executable H
  main-is:             src/Main.hs
  build-depends:       base >= 4.6 && < 4.7
                     , cmdargs >= 0.10.5
                     , pretty >= 1.1
                     , vector >= 0.10
                     , bytestring >= 0.10
                     , H
  default-language:    Haskell2010
  default-extensions:  DataKinds
                       FlexibleInstances
                       FlexibleContexts
                       GeneralizedNewtypeDeriving
                       KindSignatures
                       MultiParamTypeClasses
                       StandaloneDeriving
                       TypeOperators
  ghc-options:         -Wall -Werror

test-suite tests
  main-is:             tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       H
                     , base >= 4.6 && < 4.7
                     , bytestring >= 0.10
                     , filepath >= 1.3
                     , mtl >= 2.0
                     , process >= 1.1
                     , strict >= 0.3.2
                     , tasty >= 0.3 && < 0.5
                     , tasty-golden >= 2.1
                     , tasty-hunit >= 0.4.1
                     , text >= 0.11
  ghc-options:         -Wall
  hs-source-dirs:      tests
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
