name:                H
version:             0.1.0.0
license:             AllRightsReserved
copyright:           Copyright (c) 2013 Amgen, Inc.
cabal-version:       >=1.10
build-type:          Simple
Category:            Compiler
Synopsis:            R-to-Haskell translator and interoperability solution.
-- description:
cabal-version:       >=1.10

data-files: H.ghci

source-repository head
  type:     git
  location: git://github.com/ps-labs/H.git

library
  exposed-modules:     Data.Vector.SEXP
                       Data.Vector.SEXP.Base
                       Data.Vector.SEXP.Mutable
                       Foreign.R.Internal
                       Foreign.R.Embedded
                       Foreign.R.Error
                       Foreign.R.Parse
                       Foreign.R.Type
                       Foreign.R.Runner
                       Foreign.R
                       H.Constraints
                       H.Prelude
                       H.Prelude.Interactive
                       Language.R
                       Language.R.Debug
                       Language.R.GC
                       Language.R.Globals
                       Language.R.HExp
                       Language.R.Internal.FunWrappers
                       Language.R.Internal.FunWrappers.TH
                       Language.R.Literal
                       Language.R.QQ
                       Language.R.Runtime.QQ
                       Control.Monad.R
  other-modules:       Control.Concurrent.OSThread
                       Control.Monad.R.Class
                       H.Internal.Error
                       H.Internal.Prelude
  build-depends:       base >= 4.6 && < 5
                     , aeson >= 0.6
                     , bytestring >= 0.10
                     , pretty >= 1.1
                     , process >= 1.2
                     , setenv >= 0.1.1
                     , text >= 0.11
                     , vector >= 0.10
                     , template-haskell >= 2.8
                     , exceptions >= 0.3
                     , mtl >= 2.1
                     , primitive >= 0.5
                     , singletons >= 0.9
                     , th-lift >= 0.6
                     , transformers >= 0.3
                     , deepseq >= 1.3
  hs-source-dirs:      src
  c-sources:           cbits/missing_r.c
  include-dirs:        cbits
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       DataKinds
                       FlexibleInstances
                       FlexibleContexts
                       GeneralizedNewtypeDeriving
                       KindSignatures
                       MultiParamTypeClasses
                       NamedFieldPuns
                       RecordWildCards
                       TypeOperators
                       OverloadedStrings
  other-extensions:    CPP
                       ForeignFunctionInterface
  build-tools:         c2hs
  if os(windows)
    extra-libraries:   R
    cpp-options:       -DH_ARCH_WINDOWS
    cc-options:        -DH_ARCH_WINDOWS
  else
    build-depends:     unix >= 2.6
    pkgconfig-depends: libR >= 3.0
    cpp-options:       -DH_ARCH_UNIX
    cc-options:        -DH_ARCH_UNIX
    if os(darwin)
      cpp-options:     -DH_ARCH_UNIX_DARWIN
      cc-options:      -DH_ARCH_UNIX_DARWIN
  -- XXX -cpp is a temp workaround for GHC 7.8.
  ghc-options:         -Wall -Werror -cpp -fcontext-stack=32

executable H
  main-is:             src/Main.hs
  build-depends:       H
                     , base >= 4.6 && < 5
                     , bytestring >= 0.10
                     , cmdargs >= 0.10.5
                     , pretty >= 1.1
                     , process >= 1.2
                     , vector >= 0.10
  default-language:    Haskell2010
  default-extensions:  DataKinds
                       FlexibleInstances
                       FlexibleContexts
                       GeneralizedNewtypeDeriving
                       KindSignatures
                       MultiParamTypeClasses
                       NamedFieldPuns
                       RecordWildCards
                       StandaloneDeriving
                       TypeOperators
  ghc-options:         -Wall -Werror -threaded
  if os(windows)
    cpp-options:       -DH_ARCH_WINDOWS
    cc-options:        -DH_ARCH_WINDOWS
  else
    build-depends:     unix >= 2.6
    cpp-options:       -DH_ARCH_UNIX
    cc-options:        -DH_ARCH_UNIX

test-suite tests
  main-is:             tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       H
                     , base >= 4.6 && < 5
                     , bytestring >= 0.10
                     , directory >= 1.2
                     , filepath >= 1.3
                     , mtl >= 2.0
                     , process >= 1.2
                     , strict >= 0.3.2
                     , tasty >= 0.3
                     , tasty-golden >= 2.1
                     , tasty-hunit >= 0.4.1
                     , text >= 0.11
  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       OverloadedStrings
                       TypeOperators

test-suite test-compile-qq
  main-is:             test-compile-qq.hs
  type:                exitcode-stdio-1.0
  build-depends:       H
                     , base >= 4.6 && < 5
                     , process >= 1.2
  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests
  default-language:    Haskell2010

test-suite test-shootout-programs
  main-is:             test-shootout-programs.hs
  type:                exitcode-stdio-1.0
  build-depends:       H
                     , base >= 4.6 && < 5
                     , filepath >= 1.3
                     , process >= 1.2
  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests
  default-language:    Haskell2010
  if os(windows)
    cpp-options:       -DH_ARCH_WINDOWS
  else
    cpp-options:       -DH_ARCH_UNIX

test-suite test-vector
  main-is:            vector.hs
  type:               exitcode-stdio-1.0
  build-depends:      base
                    , H
                    , tasty
                    , tasty-quickcheck
                    , vector
                    , singletons >= 0.10
                    , quickcheck-assertions >= 0.1.1
                    , ieee754 >= 0.7.3
  ghc-options:        -Wall -threaded
  hs-source-dirs:     tests
  default-language:   Haskell2010


benchmark compile-qq-benchmarks
  main-is:             compile-qq-benchmarks.hs
  type:                exitcode-stdio-1.0
  build-depends:       H
                     , base >= 4.6 && < 5
                     , criterion >= 0.8
                     , filepath >= 1.3
                     , process >= 1.2
                     , template-haskell >= 2.8
  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests
  default-language:    Haskell2010

benchmark runtime-qq-benchmarks
  main-is:             runtime-qq-benchmarks.hs
  type:                exitcode-stdio-1.0
  build-depends:       H
                     , base >= 4.6 && < 5
                     , filepath >= 1.3
                     , process >= 1.2
  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests
  default-language:    Haskell2010

benchmark hexp-benchmark
  main-is:             hexp-bench.hs
  type:                exitcode-stdio-1.0
  build-depends:       H
                     , base >= 4.6 && < 5
                     , criterion >= 0.8
                     , primitive >= 0.5
                     , vector >= 0.10
  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests
  default-language:    Haskell2010
