name:                raskell
version:             0.1.0.0
license:             AllRightsReserved
copyright:           Copyright (c) 2013, Amgen, Inc.
cabal-version:       >=1.10
build-type:          Simple
Category:            Compiler
Synopsis:            R-to-Haskell translator and interoperability solution.
