cabal-version:      >=1.10
name:               H
version:            0.9.0.1
license:            BSD3
license-file:       LICENSE
copyright:
    Copyright (c) 2013-2015 Amgen, Inc.
    Copyright (c) 2015-2018 Tweag I/O Limited.

maintainer:         Mathieu Boespflug <m@tweag.io>
author:             Mathieu Boespflug, Facundo Dominguez, Alexander Vershilov
homepage:           https://tweag.github.io/HaskellR
synopsis:           The Haskell/R mixed programming environment.
description:        This package is part of the HaskellR project.
category:           FFI
build-type:         Simple
extra-source-files: H.ghci

source-repository head
    type:     git
    location: git://github.com/tweag/HaskellR.git
    subdir:   H

executable H
    main-is:          H.hs
    other-modules:    Paths_H
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base >=4.6 && <5,
        bytestring >=0.10 && <0.12,
        cmdargs >=0.10.5 && <0.11,
        file-embed >=0.0.7 && <0.1,
        inline-r >=0.9 && <0.11,
        pretty >=1.1 && <1.2,
        process >=1.2 && <1.7,
        temporary >=1.2.0.3 && <1.4,
        vector >=0.10 && <0.14
