name:                H
version:             1.0.0
license:             BSD3
license-file:        LICENSE
copyright:           Copyright (c) 2013-2015 Amgen, Inc.
                     Copyright (c) 2015-2018 Tweag I/O Limited.
author:              Mathieu Boespflug, Facundo Dominguez, Alexander Vershilov
maintainer:          Mathieu Boespflug <m@tweag.io>
build-type:          Simple
Category:            FFI
Synopsis:            The Haskell/R mixed programming environment.
description:         This package is part of the HaskellR project.
homepage:            https://tweag.github.io/HaskellR
cabal-version:       >=1.10
extra-source-files:  H.ghci

source-repository head
  type:     git
  location: git://github.com/tweag/HaskellR.git
  subdir: H

executable H
  main-is:             H.hs
  other-modules:       Paths_H
  build-depends:       base >= 4.6 && < 5
                     , bytestring >= 0.10 && <0.13
                     , cmdargs >= 0.10.5 && <0.11
                     , file-embed >= 0.0.7 && <0.1
                     , process >= 1.2 && <1.7
                     , temporary >= 1.2.0.3 && <1.4
  default-language:    Haskell2010
  ghc-options:         -Werror=unused-packages -Wall -threaded
