name:                ihaskell-inline-r
version:             0.1.0.0
synopsis:            Embed R quasiquotes and plots in IHaskell notebooks.
homepage:            https://tweag.github.io/HaskellR/
license:             BSD3
author:              Mathieu Boespflug, Alexander Vershilov
maintainer:          Alexander Vershilov <alexander.vershilov@tweag.io>
copyright:           Copyright (c) 2015, Tweag I/O Limited.
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     IHaskell.Display.InlineR
  build-depends:       base >=4.7 && <5
                      ,inline-r >= 0.6.0.1
                      ,ihaskell
                      ,ihaskell-blaze
                      ,filepath
                      ,blaze-html
                      ,bytestring
                      ,base64-bytestring
                      ,template-haskell
                      ,temporary >= 1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
