cabal-version:       2.0
name:                ihaskell-inline-r
version:             0.1.1.1
synopsis:            Embed R quasiquotes and plots in IHaskell notebooks.
description:         Embed R quasiquotes and plots in IHaskell notebooks.
homepage:            https://tweag.github.io/HaskellR/
license:             BSD3
license-file:        LICENSE
author:              Mathieu Boespflug, Alexander Vershilov
maintainer:          Alexander Vershilov <alexander.vershilov@tweag.io>
copyright:           Copyright (c) 2015, Tweag I/O Limited.
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.markdown

library
  exposed-modules:     IHaskell.Display.InlineR
  build-depends:       base >=4.7 && <5
                      ,inline-r >=0.6.0.1 && <1.11
                      ,ihaskell >=0.10.2.2 && <0.13
                      ,ihaskell-blaze >=0.3.0.1 && <0.4
                      ,blaze-html >=0.9.1.2 && <0.10
                      ,bytestring >=0.10.12.0 && <0.13
                      ,base64-bytestring >=1.1.0.0 && <1.3
                      ,template-haskell >=2.16.0.0 && <2.23
                      ,temporary >=1.2 && <1.4
  other-extensions:    TemplateHaskell
                       QuasiQuotes
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Werror=unused-packages -Wall

source-repository head
  type: git
  location: https://github.com/tweag/HaskellR.git
  subdir: IHaskell
