cabal-version:       2.2
name:                HaskellR-examples
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
copyright:           Copyright (c) 2013-2015 Amgen, Inc.
                     Copyright (c) 2015 Tweag I/O Limited.
build-type:          Simple
Category:            FFI
Synopsis:            Examples bundled with the HaskellR project
description:         This package is part of the HaskellR project.
extra-source-files:
  nls/nls.H
  nls2/nls2.H

source-repository head
  type:     git
  location: git://github.com/tweag/HaskellR.git
  subdir: examples

common common-config
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

common common-deps
  build-depends:
    inline-r,
    base >= 4.6 && < 5,

executable fft
  import:
    common-config,
    common-deps,
  main-is:          Main.hs
  hs-source-dirs:   fft

executable fib
  import:
    common-config,
    common-deps,
  main-is:          Main.hs
  hs-source-dirs:   fib
  other-modules:    Fib

executable nls
  import:
    common-config,
    common-deps,
  main-is:          Main.hs
  hs-source-dirs:   nls
  build-depends:
    mwc-random >= 0.12 && <0.16,

executable nls2
  import:
    common-config,
    common-deps,
  main-is:          Main.hs
  hs-source-dirs:   nls2
  build-depends:
    mwc-random >= 0.12 && <0.16,

executable RelaxWithNM
  import:
    common-config,
    common-deps,
  main-is:           RelaxWithNM.hs
  build-depends:
    deepseq >=1.4.4.0 && <1.6,
    integration >=0.2.1 && <0.3,
    temporary >= 1.2.0.3 && <1.4,
