name:                ihaskell-H
version:             0.1.0.0
synopsis:            IHaskell and H interaction module
-- description:         
homepage:            http://tweag.github.io/H/
license:             AllRightsReserved
maintainer:          Alexander Vershilov <alexander.vershilov@tweag.io>
copyright:           2015 (C), Tweag I/O
category:            IHaskell
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     IHaskell.Display.H
  -- other-modules:       
  other-extensions:    QuasiQuotes
                       TemplateHaskell
  build-depends:       base >=4.7 && <5
                      ,H >= 0.6.0.1 && <1
                      ,directory < 2
                      ,ihaskell
                      ,ihaskell-blaze
                      ,filepath
                      ,blaze-html
                      ,bytestring
                      ,base64-bytestring
                      ,template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
